# Qt_clion

./: CMakeLists.txt  README.md
Sources/: mainwindow.cpp  setdialog.cpp
Sources/Forms/: mainwindow.ui  setdialog.ui
Sources/Headers/: mainwindow.h  setdialog.h
try/1_11_try_signal_override/Sources/: mainwindow.cpp
try/case3_2_Tetris/: widget.cpp  widget.h  widget.ui
try/case3_3_Tetris/: mainwindow.cpp  mainwindow.h
try/case4_1_terraria_BOSSwar/: Images.qrc  boss.cpp  boss.h  case4_1_terraria_BOSSwar.pro  littlemap.h  mainwindow.cpp  mainwindow.h  map.cpp  map.h  player.cpp  player.h
try/case4_1_terraria_BOSSwar/pictures/: startgame.aseprite
try/case5_1_Word_Book/: case5_1_Word_Book.pro  maincd.cpp  maincd.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pictureSource.qrc  recitewords.cpp  recitewords.h
try/case5_3/: case5_3.pro  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  pagebase.cpp  pagebase.h  picture.qrc  recitewords.cpp  recitewords.h  recitewrongwords.cpp  recitewrongwords.h  search.cpp  search.h  setting.cpp  setting.h
try/case5_3/Words/: words.txt  wrongWords.txt
try/ch2_1_TencentMeettingLogin/: CMakeLists.txt
try/ch2_1_TencentMeettingLogin/Sources/: loginwindow.cpp  main.cpp
try/ch2_3_hlayout/: CMakeLists.txt
try/ch2_3_hlayout/Sources/: mainwindow.cpp
try/ch2_4_vlayout/: CMakeLists.txt
try/ch2_4_vlayout/Sources/: widget.cpp
try/new1_1_create_first_window/Sources/: mainwindow.cpp
try/new1_2_slot/: CMakeLists.txt
try/new1_2_slot/Sources/: main.cpp  slottest.cpp
try/new1_3_custom_signal/: CMakeLists.txt
try/new1_3_custom_signal/Sources/: boss.cpp  customsignal.cpp  main.cpp
try/new1_4_five_major_components/: CMakeLists.txt
try/new1_5_uiFile/: CMakeLists.txt
try/new1_5_uiFile/Sources/: mainwindow.cpp
try/new1_5_uiFile/Sources/Forms/: mainwindow.ui
try/new1_5_uiFile/Sources/Headers/: mainwindow.h
try/new1_6_sourcesfile/Sources/: mainwindow.cpp
try/new1_7_events/: CMakeLists.txt
try/new1_8_timer/: CMakeLists.txt
try/newproject_1_calculator/: CMakeLists.txt
try/try1_1/: CMakeLists.txt
(+38 files in other folders)
